--- a/00Experimental.Rmd
+++ b/00Experimental.Rmd
@@ -543,11 +543,10 @@ formula <- bf(
     day + 
     
     # Random effects
-    (persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | coupleID),
+    (1 | coupleID),
 
-  autocor = ~ ar(time = day, gr = coupleID:userID, p = 1)
+  autocor = ~ ar(time = day, gr = coupleID:userID, p = 1),
+  hu = ~ 1
 )
 
 
@@ -572,17 +571,16 @@ pa_sub <- my_brm(
   imputed_data = implist,
   
   formula = formula, 
-  prior = prior1,
+  #prior = prior1,
   data = df_double, 
-  hu = ~.,
-  family = hurdle_negbinomial(),
+  family = brms::hurdle_lognormal(),
   #control = list(adapt_delta = 0.99),
-  iter = 5000,
-  warmup = 2000,
+  iter = 500,
+  #warmup = 2000,
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache_brms", "pa_sub")
+  file = file.path("models_cache_brms", "pa_sub_hu")
 )
 
 
@@ -591,7 +589,13 @@ pa_sub <- my_brm(
 
 ```{r check_pa_sub, warning=FALSE}
 
-check_brms(pa_sub, integer = TRUE, check_loo = FALSE)
+plot(pa_sub, ask = FALSE)
+plot(pp_check(pa_sub, type = 'ecdf_overlay'))
+plot(pp_check(pa_sub))
+
+pp_check_transformed(pa_sub, transform = log1p)
+
+loo(pa_sub)
 
 ```
 
@@ -691,7 +695,13 @@ pa_obj_log <- my_brm(
 
 ```{r check_pa_obj_log, warning=FALSE}
 
-check_brms(pa_obj_log, integer = TRUE, check_loo = FALSE)
+plot(pa_obj_log, ask = FALSE)
+plot(pp_check(pa_obj_log, type = 'ecdf_overlay'))
+plot(pp_check(pa_obj_log))
+
+#pp_check_transformed(pa_obj_log, transform = log1p)
+
+loo(pa_obj_log)
 
 ```
 
@@ -785,7 +795,13 @@ mood <- my_brm(
 
 ```{r check_mood, warning=FALSE}
 
-check_brms(mood, integer = FALSE, check_loo = FALSE)
+plot(mood, ask = FALSE)
+plot(pp_check(mood, type = 'ecdf_overlay'))
+plot(pp_check(mood))
+
+#pp_check_transformed(mood, transform = log1p)
+
+loo(pa_sub)
 
 ```
 
@@ -879,7 +895,13 @@ reactance <- my_brm(
 
 ```{r check_reactance, warning=FALSE}
 
-check_brms(reactance, integer = FALSE, check_loo = FALSE)
+plot(reactance, ask = FALSE)
+plot(pp_check(reactance, type = 'ecdf_overlay'))
+plot(pp_check(reactance))
+
+#pp_check_transformed(reactance, transform = log1p)
+
+loo(reactance)
 
 ```
 
@@ -973,8 +995,13 @@ reactance_ordinal <- my_brm(
 
 ```{r check_reactance_ordinal, warning=FALSE}
 
-check_brms(reactance_ordinal, integer = FALSE, check_loo = FALSE)
+plot(reactance_ordinal, ask = FALSE)
+plot(pp_check(reactance_ordinal, type = 'ecdf_overlay'))
+plot(pp_check(reactance_ordinal))
 
+#pp_check_transformed(reactance_ordinal, transform = log1p)
+
+loo(reactance_ordinal)
 ```
 
 ```{r report_reactance_ordinal, results='asis', warning=FALSE}
@@ -1073,7 +1100,13 @@ is_reactance <- my_brm(
 
 ```{r check_is_reactance, warning=FALSE}
 
-check_brms(is_reactance, integer = FALSE, check_loo = FALSE)
+plot(is_reactance, ask = FALSE)
+plot(pp_check(is_reactance, type = 'ecdf_overlay'))
+plot(pp_check(is_reactance))
+
+#pp_check_transformed(is_reactance, transform = log1p)
+
+loo(is_reactance)
 
 ```
 
