--- a/00Experimental.Rmd
+++ b/00Experimental.Rmd
@@ -494,6 +494,7 @@ model_rownames_random_ordinal <- c(model_rownames_random,'disc')
 ```
 
 
+
 ```{r parameters_for_printing}
 
 rows_to_pack <- list(
@@ -511,6 +512,178 @@ rows_to_pack_ordinal <- list(
   "Random Effects" = c(17+5, 23+5), 
   "Additional Parameters" = c(24+5,28+6)
   )
+
+```
+
+
+###### HURDLE MODELS
+```{r set_report_order_persuasion_hu}
+
+# For indistinguishable Dyads
+model_rows_fixed_hu <- c(
+    'Intercept', 
+    'hu_Intercept',
+    # '-- WITHIN PERSON MAIN EFFECTS --', 
+    'persuasion_self_cw', 
+    'persuasion_partner_cw', 
+    'pressure_self_cw', 
+    'pressure_partner_cw', 
+    'pushing_self_cw', 
+    'pushing_partner_cw', 
+    'day', 
+    'weartime_self_cw',
+    
+    # '-- BETWEEN PERSON MAIN EFFECTS',
+    'persuasion_self_cb',
+    'persuasion_partner_cb',
+    'pressure_self_cb',
+    'pressure_partner_cb',
+    'pushing_self_cb',
+    'pushing_partner_cb',
+    'weartime_self_cb',
+    
+    # HURDLE MODEL
+    # '-- WITHIN PERSON MAIN EFFECTS --', 
+    'hu_persuasion_self_cw', 
+    'hu_persuasion_partner_cw', 
+    'hu_pressure_self_cw', 
+    'hu_pressure_partner_cw', 
+    'hu_pushing_self_cw', 
+    'hu_pushing_partner_cw', 
+    'hu_day', 
+    'hu_weartime_self_cw',
+    
+    # '-- BETWEEN PERSON MAIN EFFECTS',
+    'hu_persuasion_self_cb',
+    'hu_persuasion_partner_cb',
+    'hu_pressure_self_cb',
+    'hu_pressure_partner_cb',
+    'hu_pushing_self_cb',
+    'hu_pushing_partner_cb',
+    'hu_weartime_self_cb'
+  )
+
+model_rows_random_hu <- c(
+  # '--------------',
+  # '-- RANDOM EFFECTS --',
+  'sd(Intercept)', 
+  'sd(hu_Intercept)',
+  'sd(persuasion_self_cw)',
+  'sd(persuasion_partner_cw)',
+  'sd(pressure_self_cw)',
+  'sd(pressure_partner_cw)',
+  'sd(pushing_self_cw)',
+  'sd(pushing_partner_cw)',
+  # HURDLE
+  'sd(hu_persuasion_self_cw)',
+  'sd(hu_persuasion_partner_cw)',
+  'sd(hu_pressure_self_cw)',
+  'sd(hu_pressure_partner_cw)',
+  'sd(hu_pushing_self_cw)',
+  'sd(hu_pushing_partner_cw)',
+  # '-- CORRELATION STRUCTURE -- ', 
+  'ar[1]', 
+  'nu',
+  'shape',
+  'sderr',
+  'sigma'
+)
+
+```
+
+
+
+```{r set_display_names_alt_hu}
+
+# For indistinguishable Dyads
+model_rownames_fixed_hu <- c(
+    "Intercept", 
+    "Hurdle Intercept",
+    # "-- WITHIN PERSON MAIN EFFECTS --", 
+    "Daily persuasion experienced", 
+    "Daily persuasion utilized (partner's view)", # OR partner received
+    "Daily pressure experienced", 
+    "Daily pressure utilized (partner's view)", 
+    "Daily pushing experienced", 
+    "Daily pushing utilized (partner's view)", 
+    "Day", 
+    "Daily weartime",
+    
+    # "-- BETWEEN PERSON MAIN EFFECTS",
+    "Mean persuasion experienced", 
+    "Mean persuasion utilized (partner's view)", 
+    "Mean pressure experienced", 
+    "Mean pressure utilized (partner's view)", 
+    "Mean pushing experienced", 
+    "Mean pushing utilized (partner's view)", 
+    "Mean weartime",
+    
+    # HURDLE
+    # "-- WITHIN PERSON MAIN EFFECTS --", 
+    "Hu Daily persuasion experienced", 
+    "Hu Daily persuasion utilized (partner's view)", # OR partner received
+    "Hu Daily pressure experienced", 
+    "Hu Daily pressure utilized (partner's view)", 
+    "Hu Daily pushing experienced", 
+    "Hu Daily pushing utilized (partner's view)", 
+    "Hu Day", 
+    "Hu Daily weartime",
+    
+    # "-- BETWEEN PERSON MAIN EFFECTS",
+    "Hu Mean persuasion experienced", 
+    "Hu Mean persuasion utilized (partner's view)", 
+    "Hu Mean pressure experienced", 
+    "Hu Mean pressure utilized (partner's view)", 
+    "Hu Mean pushing experienced", 
+    "Hu Mean pushing utilized (partner's view)", 
+    "Hu Mean weartime"
+  )
+
+
+model_rownames_random_hu <- c(
+  # '--------------',
+  # '-- RANDOM EFFECTS --',
+  'sd(Intercept)', 
+  'sd(Hurdle Intercept)', 
+  "sd(Daily persuasion experienced)", 
+  "sd(Daily persuasion utilized (partner's view))", # OR partner received
+  "sd(Daily pressure experienced)", 
+  "sd(Daily pressure utilized (partner's view))", 
+  "sd(Daily pushing experienced)", 
+  "sd(Daily pushing utilized (partner's view))", 
+  
+  # Hurdle
+  "sd(Hu Daily persuasion experienced)", 
+  "sd(Hu Daily persuasion utilized (partner's view))", # OR partner received
+  "sd(Hu Daily pressure experienced)", 
+  "sd(Hu Daily pressure utilized (partner's view))", 
+  "sd(Hu Daily pushing experienced)", 
+  "sd(Hu Daily pushing utilized (partner's view))", 
+  # '-- CORRELATION STRUCTURE -- ', 
+  'ar[1]', 
+  'nu',
+  'shape',
+  'sderr',
+  'sigma'
+)
+
+
+```
+
+
+```{r parameters_for_printing_hu}
+
+rows_to_pack_hu <- list(
+  "Conditional Within-Person Effects" = c(3,10),
+  "Conditional Between-Person Effects" = c(11,17),
+  
+  "Hurdle Within-Person Effects" = c(18,25),
+  "Hurdle Between-Person Effects" = c(26,32),
+  
+  "Random Effects" = c(33, 46), 
+  "Additional Parameters" = c(47,51)
+  )
+
 
 ```
 
@@ -543,24 +716,39 @@ formula <- bf(
     day + 
     
     # Random effects
-    (1 | coupleID),
-
-  autocor = ~ ar(time = day, gr = coupleID:userID, p = 1),
-  hu = ~ 1
+    (1 + persuasion_self_cw + persuasion_partner_cw +
+    pressure_self_cw + pressure_partner_cw +
+    pushing_self_cw + pushing_partner_cw | coupleID),
+  
+  hu = ~ persuasion_self_cw + persuasion_partner_cw +
+    pressure_self_cw + pressure_partner_cw +
+    pushing_self_cw + pushing_partner_cw +
+    
+    persuasion_self_cb + persuasion_partner_cb +
+    pressure_self_cb + pressure_partner_cb +
+    pushing_self_cb + pushing_partner_cb +
+    
+    day + 
+    
+    # Random effects
+    (1 + persuasion_self_cw + persuasion_partner_cw +
+    pressure_self_cw + pressure_partner_cw +
+    pushing_self_cw + pushing_partner_cw | coupleID),
+  
+  autocor = ~ ar(time = day, gr = coupleID:userID, p = 1)
 )
-
-
 
 
 prior1 <- c(
   brms::set_prior("normal(0, 2.5)", class = "b"),
-  brms::set_prior("normal(0, 50)", class = "Intercept", lb = 0),
+  brms::set_prior("normal(4, 2)", class = "Intercept"), # for non-zero PA
+  brms::set_prior("normal(0, 2.5)", class = "Intercept", dpar = 'hu'), # hurdle part
   
-  brms::set_prior("normal(0, 10)", class = "sd", group = "coupleID", lb = 0),
+  brms::set_prior("normal(0, 5)", class = "sd", group = "coupleID", lb = 0), # Random effects SD for couple
   
-  brms::set_prior("cauchy(0, 5)", class = "ar", lb = -1, ub = 1),
-  brms::set_prior("cauchy(0, 20)", class = "shape"), 
-  brms::set_prior("cauchy(0, 10)", class='sderr')
+  brms::set_prior("normal(0, 0.5)", class = "ar", lb = -1, ub = 1), # Autocorrelation prior
+  brms::set_prior("normal(0, 5)", class = "sderr", lb = 0), # Standard error of residuals
+  brms::set_prior("normal(0, 5)", class = "sigma", lb = 0) # Residual SD for lognormal
 )
 
 
@@ -575,7 +763,7 @@ pa_sub <- my_brm(
   data = df_double, 
   family = brms::hurdle_lognormal(),
   #control = list(adapt_delta = 0.99),
-  iter = 500,
+  #iter = 5000,
   #warmup = 2000,
   chains = 4,
   cores = 4,
@@ -605,12 +793,12 @@ loo(pa_sub)
 
 summarize_brms(
   pa_sub, 
-  model_rows_fixed = model_rows_fixed,
-  model_rows_random = model_rows_random,
-  model_rownames_fixed = model_rownames_fixed,
-  model_rownames_random = model_rownames_random,
+  model_rows_fixed = model_rows_fixed_hu,
+  model_rows_random = model_rows_random_hu,
+  model_rownames_fixed = model_rownames_fixed_hu,
+  model_rownames_random = model_rownames_random_hu,
   exponentiate = T) %>%
-  print_df(rows_to_pack = rows_to_pack)
+  print_df(rows_to_pack = rows_to_pack_hu)
 
 ```
 
