--- a/00Experimental.Rmd
+++ b/00Experimental.Rmd
@@ -51,6 +51,8 @@ options(
   dplyr.print_max = 100, 
   brms.backend = 'cmdstan',
   brms.file_refit = ifelse(use_mi, 'never', 'on_change'),
+  brms.file_refit = 'on_change',
+  #brms.file_refit = 'always',
   error = function() beepr::beep(sound = 5)
 )
 
