--- a/00Experimental.Rmd
+++ b/00Experimental.Rmd
@@ -451,9 +451,9 @@ rows_to_pack_hu <- list(
 ```{r explore_pa_sub_dist}
 
 range(df_double$pa_sub, na.rm = T) 
-hist(df_double$pa_sub, breaks = 100) 
+hist(df_double$pa_sub, breaks = 30) 
 
-hist(log(df_double$pa_sub+00000000001), breaks = 20)
+hist(log(df_double$pa_sub+00000000001), breaks = 30)
 
 ```
 
@@ -740,8 +740,8 @@ mood <- my_brm(
   data = df_double, 
   family = brms::skew_normal(),
   #control = list(adapt_delta = 0.95, max_treedepth = 15),
-  iter = 1000,
-  #warmup = 2000,
+  iter = 5000,
+  warmup = 2000,
   chains = 4,
   cores = 4,
   seed = 7777,
@@ -858,8 +858,8 @@ reactance <- my_brm(
   data = df_double, 
   family = brms::hurdle_lognormal(),
   #control = list(adapt_delta = 0.95, max_treedepth = 15),
-  iter = 1000,
-  #warmup = 2000,
+  iter = 5000,
+  warmup = 2000,
   chains = 4,
   cores = 4,
   seed = 7777,
@@ -961,8 +961,8 @@ reactance_ordinal <- my_brm(
   data = df_double, 
   family = brms::cumulative(),
   control = list(adapt_delta = 0.95),
-  iter = 1000,
-  #warmup = 2000,
+  iter = 5000,
+  warmup = 2000,
   chains = 4,
   cores = 4,
   seed = 7777,
@@ -1069,8 +1069,8 @@ is_reactance <- my_brm(
   data = df_double, 
   family = brms::bernoulli(),
   #control = list(adapt_delta = 0.95, max_treedepth = 15),
-  iter = 1000,
-  #warmup = 2000,
+  iter = 5000,
+  warmup = 2000,
   chains = 4,
   cores = 4,
   seed = 7777,
