--- a/01_Analysis_Script_FINAL.Rmd
+++ b/01_Analysis_Script_FINAL.Rmd
@@ -54,7 +54,7 @@ options(
   dplyr.print_max = 100, 
   brms.backend = 'cmdstan',
   brms.file_refit = ifelse(use_mi, 'never', 'on_change'),
-  #brms.file_refit = 'always',
+  brms.file_refit = 'always',
   error = function() beepr::beep(sound = 5)
 )
 
