--- a/00Experimental.Rmd
+++ b/00Experimental.Rmd
@@ -494,7 +494,10 @@ formula <- bf(
     (1 + persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw | coupleID) 
-  , autocor = ~ ar(gr = coupleID)
+  #, autocor = ~ ar(gr = coupleID, cov = TRUE)
+  #, autocor = ~ arma(gr = coupleID, cov = TRUE)
+  , autocor = ~ unstr(time = day, gr = coupleID:userID)
+  #, autocor = ~ cosy(gr = coupleID)
 )
 
 prior1 <- c(
@@ -504,11 +507,12 @@ prior1 <- c(
   
   brms::set_prior("normal(0, 5)", class = "sd", group = "coupleID", lb = 0), # Random effects SD for couple
   
-  brms::set_prior("normal(0, 0.1)", class = "ar", lb = -1, ub = 1), # Autocorrelation prior
-  brms::set_prior("normal(0.1,1)", class = "sderr", lb = 0),
-  brms::set_prior("normal(0.1,1)", class = "sigma", lb = 0) # Residual SD for lognormal
+  #brms::set_prior("normal(0, 0.3)", class = "ar", lb = -1, ub = 1), # Autocorrelation prior
+  #brms::set_prior("normal(0, 0.3)", class = "ma", lb = -1, ub = 1), # moving average prior
+  
+  #brms::set_prior("normal(0.1,2)", class = "sderr", lb = 0),
+  brms::set_prior("normal(0.1,2)", class = "sigma", lb = 0) # Residual SD for lognormal
 )
-
 
 #df_minimal <- df_double[, c("AorB", all.vars(as.formula(formula)))]
 
@@ -520,9 +524,9 @@ pa_sub <- my_brm(
   prior = prior1,
   data = df_double, 
   family = brms::hurdle_lognormal(),
-  control = list(adapt_delta = 0.95),
-  iter = 5000,
-  warmup = 2000,
+  #control = list(adapt_delta = 0.95),
+  #iter = 5000,
+  #warmup = 2000,
   chains = 4,
   cores = 4,
   seed = 7777,
@@ -556,8 +560,12 @@ summarize_brms(
   model_rows_random = model_rows_random_hu,
   model_rownames_fixed = model_rownames_fixed_hu,
   model_rownames_random = model_rownames_random_hu,
-  exponentiate = T) %>%
-  print_df(rows_to_pack = rows_to_pack_hu)
+  exponentiate = T,
+  include_p_direction = T) %>%
+  print_df(rows_to_pack = rows_to_pack_hu
+)
+
+
 
 ```
 
